<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compare_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_name_prev"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2021 (C 2021)" />
                <TextView
                    android:id="@+id/tv_name_curr"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="2021 (C 2021)" />
                <TextView
                    android:id="@+id/tv_name_next"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2021 (C 2021)" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_potentially_hazardous"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare_potentially_hazardous" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_hazardous_prev"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Yes" />
                <TextView
                    android:id="@+id/tv_hazardous_curr"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="No" />
                <TextView
                    android:id="@+id/tv_hazardous_next"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="No" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_close_approach_date"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare_close_approach_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_date_prev"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2024 mar. 13 17:31" />
                <TextView
                    android:id="@+id/tv_date_curr"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="2024 mar. 13 17:31" />
                <TextView
                    android:id="@+id/tv_date_next"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="2024 mar. 13 17:31" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_absolute_magnitude"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare_absolute_magnitude" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_magnitude_prev"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/red_900"
                    tools:text="19.0" />
                <TextView
                    android:id="@+id/tv_magnitude_curr"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="20.0" />
                <TextView
                    android:id="@+id/tv_magnitude_next"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/green_900"
                    tools:text="21.1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_relative_velocity"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare_relative_velocity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_velocity_prev"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/red_900"
                    tools:text="19.0" />
                <TextView
                    android:id="@+id/tv_velocity_curr"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="20.0" />
                <TextView
                    android:id="@+id/tv_velocity_next"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/green_900"
                    tools:text="21.1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_miss_distance"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare_miss_distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_distance_prev"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/red_900"
                    tools:text="19.0" />
                <TextView
                    android:id="@+id/tv_distance_curr"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="20.0" />
                <TextView
                    android:id="@+id/tv_distance_next"
                    style="@style/TextRegular.Size12.Primary"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/green_900"
                    tools:text="21.1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_estimated_diameter"
                style="@style/TextBold.Size14.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/compare_estimated_diameter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        style="@style/TextMedium.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_min" />
                    <TextView
                        android:id="@+id/tv_diameter_min_prev"
                        style="@style/TextRegular.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:textColor="@color/red_900"
                        tools:text="19.0" />
                    <TextView
                        style="@style/TextMedium.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/compare_max" />
                    <TextView
                        android:id="@+id/tv_diameter_max_prev"
                        style="@style/TextRegular.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:textColor="@color/red_900"
                        tools:text="19.0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        style="@style/TextMedium.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_min" />
                    <TextView
                        android:id="@+id/tv_diameter_min_curr"
                        style="@style/TextRegular.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="19.0" />
                    <TextView
                        style="@style/TextMedium.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/compare_max" />
                    <TextView
                        android:id="@+id/tv_diameter_max_curr"
                        style="@style/TextRegular.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="19.0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        style="@style/TextMedium.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_min" />
                    <TextView
                        android:id="@+id/tv_diameter_min_next"
                        style="@style/TextRegular.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:textColor="@color/green_900"
                        tools:text="19.0" />
                    <TextView
                        style="@style/TextMedium.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/compare_max" />
                    <TextView
                        android:id="@+id/tv_diameter_max_next"
                        style="@style/TextRegular.Size12.Primary"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:textColor="@color/green_900"
                        tools:text="19.0" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>